pkg/kates/k8s_resource_types/testdata/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    getambassador.io/ambassador-id: ingressstatustest1
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"getambassador.io/ambassador-id":"ingressstatustest1","kubernetes.io/ingress.class":"ambassador"},"labels":{"kat-ambassador-id":"ingressstatustest1","scope":"AmbassadorTest"},"name":"ingressstatustest1","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"ingressstatustest1-http","servicePort":80},"path":"/IngressStatusTest1/"}]}}]}}
    kubernetes.io/ingress.class: ambassador
  creationTimestamp: "2021-10-05T20:02:02Z"
  generation: 1
  labels:
    kat-ambassador-id: ingressstatustest1
    scope: AmbassadorTest
  name: ingressstatustest1
  namespace: default
  resourceVersion: "1902"
  uid: 7607bedf-5414-4a1c-a7cf-1e5e80e4ac91
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ingressstatustest1-http
          servicePort: 80
        path: /IngressStatusTest1/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    getambassador.io/ambassador-id: ingressstatustest1
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"getambassador.io/ambassador-id":"ingressstatustest1","kubernetes.io/ingress.class":"ambassador"},"labels":{"kat-ambassador-id":"ingressstatustest1","scope":"AmbassadorTest"},"name":"ingressstatustest1","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"ingressstatustest1-http","servicePort":80},"path":"/IngressStatusTest1/"}]}}]}}
    kubernetes.io/ingress.class: ambassador
  creationTimestamp: "2021-10-05T20:02:02Z"
  generation: 1
  labels:
    kat-ambassador-id: ingressstatustest1
    scope: AmbassadorTest
  name: ingressstatustest1
  namespace: default
  resourceVersion: "1902"
  uid: 7607bedf-5414-4a1c-a7cf-1e5e80e4ac91
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ingressstatustest1-http
          servicePort: 80
        path: /IngressStatusTest1/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    getambassador.io/ambassador-id: ingressstatustest1
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"getambassador.io/ambassador-id":"ingressstatustest1","kubernetes.io/ingress.class":"ambassador"},"labels":{"kat-ambassador-id":"ingressstatustest1","scope":"AmbassadorTest"},"name":"ingressstatustest1","namespace":"default"},"spec":{"rules":[{"http":{"paths":[{"backend":{"serviceName":"ingressstatustest1-http","servicePort":80},"path":"/IngressStatusTest1/"}]}}]}}
    kubernetes.io/ingress.class: ambassador
  creationTimestamp: "2021-10-05T20:02:02Z"
  generation: 1
  labels:
    kat-ambassador-id: ingressstatustest1
    scope: AmbassadorTest
  name: ingressstatustest1
  namespace: default
  resourceVersion: "1902"
  uid: 7607bedf-5414-4a1c-a7cf-1e5e80e4ac91
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ingressstatustest1-http
            port:
              number: 80
        path: /IngressStatusTest1/
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
